<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:useDefaultMargins="true">

    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:digits="0123456789."
        android:ems="10"
        android:inputType="number"
        android:maxLength="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightEditText" />

    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:digits="0123456789."
        android:ems="10"
        android:inputType="number"
        android:maxLength="6"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="40dp" />

    <TextView
        android:id="@+id/bmiTextView"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="24dp"
        android:background="@color/result_background"
        android:elevation="@dimen/elevation"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightEditText" />

    <TextView
        android:id="@+id/heightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="28dp"
        android:background="@color/result_background"
        android:elevation="@dimen/elevation"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:text="Height: "
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintEnd_toStartOf="@+id/heightEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightTextView" />

    <TextView
        android:id="@+id/weightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginEnd="112dp"
        android:background="@color/result_background"
        android:elevation="@dimen/elevation"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:text="Weight: "
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintEnd_toStartOf="@+id/weightEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
